# stl-benchmark

./: .gitmodules  LICENSE  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/src/: main.cpp  parse_stl.cpp  parse_stl.h
julia/: Project.toml  nist.stl  stl.jl
julia/src/: Benchmark.jl  stl.jl
python/: benchmark.py  pyproject.toml
